[package]
name = "cosmic_knowledge"
version = "0.3.0"
edition = "2021"

[dependencies]
colored = "2"
rodio = "0.17"
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "flac", "vorbis"] }
chrono = "0.4"
once_cell = "1"
printpdf  = "0.6"
getrandom = "0.2"
crossterm = "0.27"
ctrlc     = "3"

# On desktop platforms (Windows, macOS, Linux x86) bundle SQLite for a
# zero-dependency binary.  On Android/Termux the bundled build requires a C
# toolchain and often fails; instead link the system SQLite provided by:
#   pkg install sqlite
[target.'cfg(not(target_os = "android"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "0.31" }

# rdrand uses the x86/x86_64 RDRAND CPU instruction and only compiles on those
# targets.  All other architectures (ARM, RISC-V, …) fall through to getrandom.
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
rdrand = "0.8"
